--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^1.1.2
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.1
+  cloudinary_sdk: ^5.0.0+1
 
 flutter_icons:
   android: "launcher_icon"
