--- a/.github/workflows/main_hmud.yml
+++ b/.github/workflows/main_hmud.yml
@@ -28,11 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r server/setup.txt
-        
-      - name: Zip only the server folder for deployment
-        run: |
-          zip -r release.zip server
+        run: pip install -r requirements.txt
           
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -62,7 +58,7 @@ jobs:
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment into server folder
+      - name: Unzip artifact for deployment
         run: unzip release.zip
 
       
